# spoticraft

./: .gitignore  ASSET_UI_ENHANCEMENTS.md  COMMANDS.md  Dockerfile  PLAYLIST_CACHE_PLAN.md  PLAYLIST_PRESENTATION_PLAN.md  README.MD  docker-compose.example.yml  pyproject.toml
.spoticraft-sample/state/: demo-liked-to-archive.json
.spoticraft-sample/state/auth_cache/: token.json
.spotifreak-sample/: config.yml
.spotifreak-sample/state/: demo-liked-to-archive.json
.spotifreak-sample/state/auth_cache/: token.json
.spotifreak-sample/syncs/: README.txt  demo-lastfm-top-tracks.yml  demo-liked-to-archive.yml  demo-playlist-presentation.yml
spoticraft/: __init__.py  app_context.py  cli.py  config.py  state.py  supervisor.py
spoticraft/auth/: __init__.py  spotify.py
spoticraft/modules/: __init__.py  base.py  playlist_mirror.py
spoticraft/services/: __init__.py  spotify_client.py
spotifreak/: __init__.py  app_context.py  cli.py  config.py  ipc.py  logging.py  state.py  supervisor.py
spotifreak/auth/: __init__.py  spotify.py
spotifreak/modules/: __init__.py  base.py  lastfm_top_tracks.py  playlist_cache.py  playlist_mirror.py  playlist_presentation.py  playlist_retention.py
spotifreak/services/: __init__.py  spotify_client.py
spotifreak/templates/: __init__.py  blank.yml  playlist_cache_basic.yml  playlist_mirror_basic.yml  playlist_presentation_advanced.yml  playlist_presentation_basic.yml  playlist_retention_basic.yml
spotifreak/web/: __init__.py  api.py
spotifreak/web/static/: app.js  index.html  styles.css
tests/web/: test_assets.py
